Update: Memperbaharui file ListOfNumber2.java